developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_must_not_contain_square_brackets-deadkey.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_must_not_contain_square_brackets-deadkey'

begin unicode > use(main)

group(main) using keys
  deadkey(test[yeah]) + [K_A] > 'a'
